# EcommerceRS

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.devel.yml  flake.nix
config/: App.devel.toml
entrypoints/restapi/: Cargo.toml
entrypoints/restapi/src/: server.rs
entrypoints/restapi/src/controllers/: category_controller.rs  mod.rs  product_controller.rs  user_controller.rs
entrypoints/restapi/src/dto/: category_dto.rs  mod.rs  product_dto.rs  user_dto.rs
entrypoints/restapi/src/errors/: category_errors.rs  mod.rs  product_errors.rs  user_errors.rs
src/: bootstrap.rs  config.rs  ecommercers.rs
src/adapters/: mod.rs
src/adapters/diesel/: mod.rs  schema.rs
src/adapters/postgres/: adapter.rs  entities.rs  errors.rs  mod.rs  schema.rs
src/adapters/postgres/entities/: cart.rs  category.rs  discount.rs  mod.rs  order.rs  product.rs  user.rs
src/adapters/postgres/migrations/2025-03-05-110937_create_users/: up.sql
src/adapters/postgres/migrations/2025-03-05-111139_create_products/: up.sql
src/adapters/postgres/migrations/2025-03-05-111224_create_orders/: up.sql
src/adapters/postgres/migrations/2025-03-05-111252_create_order_items/: up.sql
src/adapters/postgres/migrations/2025-03-05-111339_create_carts/: up.sql
src/adapters/postgres/repos/: cart_repository.rs  category_repository.rs  discount_repository.rs  mod.rs  order_repository.rs  product_repository.rs  user_repository.rs
src/adapters/redis/: adapter.rs  mod.rs
src/adapters/redis/repos/: auth_repository.rs  mod.rs
src/core/: mod.rs
src/core/models/: auth.rs  cart.rs  category.rs  discount.rs  mod.rs  order.rs  product.rs  product_category.rs  user.rs
src/core/ports/: auth_repository.rs  cart_repository.rs  category_repository.rs  discount_repository.rs  mod.rs  order_repository.rs  product_repository.rs  user_repository.rs
src/core/services/: category_service.rs  discount_service.rs  email_service.rs  mod.rs  product_service.rs  user_service.rs
(+6 files in other folders)
