[package]
name = "EcommerceRS"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "bootstrap"
path = "./src/bootstrap.rs"
