[package]
name = "ecommercers"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.29.1"
toml = "0.8.20"
rand = "0.8"
argon2 = "0.5.3"
derive_more = { version = "2", features = ["full"] }

[lib]
name = "ecommercers"
path = "./src/ecommercers.rs"

[workspace]
members = ["entrypoints/restapi"]