[package]
name = "restapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
ecommercers = { path = "../../", version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2.0.1", features = ["full"] }

[[bin]]
name = "ecommercers-restapi"
path = "./src/server.rs"
